--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "@types/react-bootstrap": "^0.32.23",
     "@types/react-dom": "^16.9.0",
+    "bootstrap": "^4.5.2",
     "immer": "^7.0.8",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
+    "react-bootstrap-range-slider": "^1.2.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
-    "typescript": "~3.7.2"
+    "typescript": "3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
